@startuml

class Game {
    +run(frameLimit)
    -update(deltaTime)
    -render()
}

class WindowManager {
    +init()
    +shutdown()
    +shouldClose()
}

class InputHandler {
    +leftPaddleDirection()
    +rightPaddleDirection()
}

class GameObject {
    -position
    -size
    -velocity
    +update(deltaTime)
}

class Paddle extends GameObject {
    +update(deltaTime)
}

class Ball extends GameObject {
    +update(deltaTime)
}

class Physics {
    +update(ball, paddles): ScoreEvent
}

class Renderer {
    +drawBall()
    +drawPaddle()
}

class Score {
    +scoreLeft()
    +scoreRight()
}

Game --> WindowManager
Game --> InputHandler
Game --> Physics
Game --> Renderer
Game --> Score

Physics --> GameObject : detects & resolves
Renderer --> GameObject : draws

@enduml
